[FIX] Fix too high sizes in tag detail view in web_ui

--- a/services/web_ui/MainApp/static/MainApp/css/new_styles.css
+++ b/services/web_ui/MainApp/static/MainApp/css/new_styles.css
@@ -720,6 +720,7 @@
 .tag-article-img img {
     width: 100%;
     height: 100%;
+    max-height: 200px;
     border-radius: 4px;
     transition: filter 0.3s ease;
 }
